add block. If i set bank transfert also bank is required

--- a/l10n_it_account/views/payment_type_view.xml
+++ b/l10n_it_account/views/payment_type_view.xml
@@ -9,7 +9,7 @@
             <field name="arch" type="xml">
                 <field name="active" position="after">
                     <newline />
-                    <field name="type"/>
+                    <field name="type" on_change="onchange_type(type)" />
                 </field>
             </field>
         </record>
