--- a/sale_order_requirement/views/stock_picking.xml
+++ b/sale_order_requirement/views/stock_picking.xml
@@ -9,7 +9,7 @@
             <field name="type">search</field>
             <field name="arch" type="xml">
                 <field name="origin" position="after">
-                    <field name="sale_order_ids"/>
+                    <field name="sale_order_ids" domain="[('state','in', ['progress', 'manual', 'done'])]"/>
                 </field>
             </field>
         </record>
