--- a/stock_picking_extended/views/picking_view.xml
+++ b/stock_picking_extended/views/picking_view.xml
@@ -62,7 +62,7 @@
                 </field>
                 <notebook position="inside">
                     <page string="Internal Notes">
-                        <field colspan="4" name="interal_note" nolabel="1"/>
+                        <field colspan="4" name="internal_note" nolabel="1"/>
                     </page>
                 </notebook>
             </field>
