--- a/sale_order_confirm/views/sale_order_confirm_view.xml
+++ b/sale_order_confirm/views/sale_order_confirm_view.xml
@@ -18,6 +18,7 @@
                             <field name="client_order_ref"/>
                             <field name="sale_version_id" attrs="{'invisible':[('sale_version_id','=',False)]}" readonly="1"/>
                             <field name="revision_note" attrs="{'invisible':[('sale_version_id','=',False)]}"/>
+                            <field name="lost_reason_id" widget="selection" attrs="{'invisible':[('state','!=','cancel')]}"/>
                         </group>
                         <group col="2" colspan="2">
                             <field name="invoiced"/>
@@ -238,6 +239,10 @@
             <field name="priority">5</field>
             <field name="arch" type="xml">
                 <data>
+                    <xpath expr="//form/group[1]/group[1]/field[@name='client_order_ref']" position="after">
+                        <field name="revision_note" attrs="{'invisible':[('sale_version_id','=',False)]}"/>
+                        <field name="lost_reason_id" widget="selection" attrs="{'invisible':[('state','!=','cancel')]}"/>
+                    </xpath>
                     <xpath expr="//field[@name='order_line' or @name='abstract_line_ids']/form//field[@name='name']" position="attributes">
                         <attribute name="nolabel">1</attribute>
                         <attribute name="placeholder">Description</attribute>
@@ -360,11 +365,11 @@
             <field name="arch" type="xml">
                 <field name="partner_id" position="after">
                     <field name="product_id" />
-
                 </field>
                 <filter string="Sales" position="replace">
                     <filter icon="terp-check" string="Sales" domain="[('state','in',('manual','progress'))]" context="{'show_date': True}"/>
                     <filter icon="gtk-ok" string="Sales Done" domain="[('state','=', 'done')]" context="{'show_date': True}"/>
+                    <filter icon="gtk-no" string="Sales Cancelled" domain="[('state','=', 'cancel')]" context="{'show_lost_reason_id': True}"/>
                 </filter>
             </field>
         </record>
@@ -378,7 +383,9 @@
                 <field name="date_order" position="replace">
                     <field name="date_order" invisible="context.get('show_date',False)"/>
                     <field name="date_confirm" invisible="not context.get('show_date',False)"/>
-
+                </field>
+                <field name="state" position="after">
+                    <field name="lost_reason_id" invisible="not context.get('show_lost_reason_id',False)"/>
                 </field>
             </field>
         </record>
