--- a/sale_order_confirm/wizard/add_order_version_view.xml
+++ b/sale_order_confirm/wizard/add_order_version_view.xml
@@ -9,6 +9,7 @@
                 <form>
                     <separator colspan="4" string="Reason"/>
                     <field name="name" />
+                    <field name="lost_reason_id" widget="selection"/>
                     <group col="2" colspan="2">
                         <button icon='gtk-cancel' special="cancel" string="_Cancel" />
                         <button name="create_revision" string="Reject with New Revision" colspan="1" type="object" icon="gtk-go-forward" />
