--- a/sale_order_requirement/views/order_requirement_line.xml
+++ b/sale_order_requirement/views/order_requirement_line.xml
@@ -239,6 +239,7 @@
                             attrs="{'invisible': [('state','=','done')]}"/>
                     <button name="action_reload_bom" icon="gtk-refresh" type="object" help="Reload BOM"
                             attrs="{'invisible': [('state','!=','draft')]}"/>
+                    <field name="production_orders_state"/>
                     <button name="print_production_order" string="Print" type="object" help="Print All production Order" icon="gtk-print" attrs="{'invisible': [('state','=','draft')]}" />
                 </tree>
             </field>
