--- a/hr_attendance_position/views/hr_attendance.xml
+++ b/hr_attendance_position/views/hr_attendance.xml
@@ -11,10 +11,10 @@
                 <field name="day" position="before">
                     <field name="latitude"/>
                     <field name="longitude"/>
+                    <field name="position" />
                 </field>
             </field>
         </record>
 
     </data>
-
 </openerp>
