--- a/hr_expense_extended/views/hr_expense_view.xml
+++ b/hr_expense_extended/views/hr_expense_view.xml
@@ -30,7 +30,7 @@
                             <field name="sequence" invisible="1"/>
                             <field name="date_value"/>
                             <field name="task_id" groups="project.group_project_user"/>
-                            <field name="product_id" on_change="onchange_product_id(product_id, uom_id, parent.employee_id, context)" required="1"/>
+                            <field name="product_id" on_change="onchange_product_id(product_id, uom_id, parent.employee_id, context)" required="1" widget="selection"/>
                             <field name="name" />
                             <field name="ref"/>
                             <field name="payer" />
