--- a/stock_picking_extended/views/purchase_order_view.xml
+++ b/stock_picking_extended/views/purchase_order_view.xml
@@ -31,20 +31,15 @@
                     <separator string="Pickings" colspan="4"/>
                     <newline/>
                     <field name="picking_ids" nolabel="1" colspan="4" context="{'form_view_ref':'stock.view_picking_in_form', 'tree_view_ref':'stock.view_picking_in_tree' }">
-                        <!--<tree colors="blue:state == 'draft';grey:state == 'done';red:state not in ('cancel', 'done') and date &lt; current_date"-->
-                              <!--string="Picking list">-->
-                            <!--<field name="ddt_in_date"/>-->
-                            <!--<field name="ddt_in_reference"/>-->
-                            <!--<field name="name"/>-->
-                            <!--<field name="partner_id"/>-->
-                            <!--<field name="backorder_id" groups="base.group_extended"/>-->
-                            <!--<field name="origin"/>-->
-                            <!--<field name="date"/>-->
-                            <!--<field name="min_date"/>-->
-                            <!--<field name="invoice_state" groups="base.group_extended"/>-->
-                            <!--<field name="stock_journal_id" groups="base.group_extended" widget="selection"/>-->
-                            <!--<field name="state"/>-->
-                        <!--</tree>-->
+                        <tree string="Picking list">
+                            <field name="type"/>
+                            <field name="complete_name"/>
+                            <field name="backorder_id" groups="base.group_extended"/>
+                            <field name="date"/>
+                            <field name="invoice_state" groups="base.group_extended"/>
+                            <field name="stock_journal_id" groups="base.group_extended" widget="selection"/>
+                            <field name="state"/>
+                        </tree>
                     </field>
                 </field>
             </field>
