[data_migration]: Added format for standard price update only. Strip € sign at the begining of the line

--- a/data_migration/wizard/file_import_view.xml
+++ b/data_migration/wizard/file_import_view.xml
@@ -75,6 +75,7 @@
                         <field name="file_name" invisible="1" />
                         <field name="content_base64" filename="file_name" required="True" />
                         <field name="format" />
+                        <newline />
                         <field name="update_product_name" />
                         <field name="update_only" />
                     </group>
