--- a/sale_order_modify_confirmed_service/views/sale_view.xml
+++ b/sale_order_modify_confirmed_service/views/sale_view.xml
@@ -8,9 +8,10 @@
             <field name="arch" type="xml">
                 <button name="action_reopen" position="before">
                     <field name="has_services" invisible="1"/>
-                    <button type='action' name='%(action_modify_saleorder)d' icon="gtk-edit" string="Edit Services" colspan="4"
-                    attrs="{'invisible': ['|',('has_services','=',False),
-                                          ('state','not in',['wait_supervisor_validation','done'])]}"/>
+                    <button type='action' name='%(action_modify_saleorder)d' icon="gtk-edit" string="Edit Services"
+                            colspan="4" groups="base.group_sale_manager"
+                            attrs="{'invisible': ['|',('has_services','=',False),
+                                                      ('state','not in',['wait_supervisor_validation','done'])]}"/>
                 </button>
             </field>
         </record>
