[sale_order_modify_confirmed_service] modified view

--- a/sale_order_modify_confirmed_service/views/sale_view.xml
+++ b/sale_order_modify_confirmed_service/views/sale_view.xml
@@ -6,13 +6,14 @@
             <field name="model">sale.order</field>
             <field name="inherit_id" ref="sale.view_order_form"/>
             <field name="arch" type="xml">
-                <button name="action_reopen" position="before">
+                <group string="Connection Flow" position="before">
                     <field name="has_services" invisible="1"/>
                     <button type='action' name='%(action_modify_saleorder)d' icon="gtk-edit" string="Edit Services"
-                            colspan="4" groups="base.group_sale_manager"
+                            colspan="1" groups="base.group_sale_manager"
                             attrs="{'invisible': ['|',('has_services','=',False),
                                                       ('state','not in',['wait_supervisor_validation','progress','done'])]}"/>
-                </button>
+                    <newline />
+                </group>
             </field>
         </record>
 
