fix error on view, now on board is possible to see only correct invoiced state

--- a/stock_picking_extended/views/picking_view.xml
+++ b/stock_picking_extended/views/picking_view.xml
@@ -243,7 +243,7 @@
                     <field name="order_ready" />
                     <field name="amount_total" sum="Total" groups="base.group_sale_salesman"/>
                     <field name="payment_term_id" invisible="context.get('show_delivery', False)"/>
-                    <field name="invoice_state" invisible="context.get('show_delivery', False)" />
+                    <field name="invoiced_state" invisible="context.get('show_delivery', False)" />
                 </tree>
             </field>
         </record>
