now is possible to se also delivery expected date

--- a/sale_order_confirm/views/sale_order_confirm_view.xml
+++ b/sale_order_confirm/views/sale_order_confirm_view.xml
@@ -383,6 +383,7 @@
                 <field name="date_order" position="replace">
                     <field name="date_order" invisible="context.get('show_date',False)"/>
                     <field name="date_confirm" invisible="not context.get('show_date',False)"/>
+                    <field name="minimum_planned_date" invisible="not context.get('show_date',False)"/>
                 </field>
                 <field name="state" position="after">
                     <field name="lost_reason_id" invisible="not context.get('show_lost_reason_id',False)"/>
