--- a/account_invoice_extended/views/account_view.xml
+++ b/account_invoice_extended/views/account_view.xml
@@ -38,7 +38,18 @@
             <field name="inherit_id" ref="account.invoice_form"></field>
             <field name="arch" type="xml">
                 <xpath expr="//notebook" position="inside">
-                    <page string="Stock Picking">
+                    <page string="Sale / Stock Picking" colspan="4">
+                        <separator string="Sale" colspan="4" />
+                        <field name="sale_order_ids" nolabel="1" colspan="4">
+                            <tree>
+                                <field name="shop_id"/>
+                                <field name="name"/>
+                                <field name="date_order"/>
+                                <field name="client_order_ref"/>
+                                <field name="amount_untaxed" sum="SUM"/>
+                            </tree>
+                        </field>
+                        <separator string="Stock Picking" colspan="4"/>
                         <field name="stock_picking_ids" nolabel="1" context="{'view_print': True, 'type':'out', 'form_view_ref':'stock.view_picking_out_form', 'tree_view_ref':'stock.view_picking_out_tree'}"/>
                     </page>
                 </xpath>
